# split-extend

./: CHANGELOG.md  Cargo.toml  README.md  ci.bash
src/: lib.rs  vec.rs
